--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.3.1",
+    "leaflet": "^1.0.3",
     "vue": "^2.1.0",
     "vuex": "^2.1.2"
   },
