--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^2.1.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.4",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.0.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.2.0",
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.1",
     "sass-loader": "^5.0.1",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
