--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bulma": "^0.3.1",
     "d3": "^4.6.0",
-    "leaflet": "^1.0.3",
+    "mapbox-gl": "^0.32.1",
     "vue": "^2.1.0",
     "vuex": "^2.1.2"
   },
