add docker file for building system add directions in README update docker-compose to include builder system

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '2'
 services:
+    builder:
+        build:
+            context: .
+            dockerfile: build.Dockerfile
+        volumes:
+            - ./:/var/www
     web:
         build:
             context: .
